--- a/CSS/style.css
+++ b/CSS/style.css
@@ -53,7 +53,7 @@ body {
 }
 @media (max-width: 768px) {
   .middle-box .calculator {
-    height: 75%;
+    height: 600px;
     width: 85%;
     flex-direction: column;
   }
